# locador-financial

./: .env  .gitignore  .replit  DEPLOYMENT.md  README.md  database_discrepancies_analysis.md  database_reverse_engineering.py  docker-compose.prod.yml  docker-compose.yml  error.txt  pyproject.toml  replit.md  start-dev.bat  start-dev.sh  start-services.ps1  temp_login.json  test-dashboard.js  test-login.html  test_login.json  test_models.py
.qoder/quests/: checklist-status-update.md  continue-development.md  develop-project-from-docs.md  document-review-and-update.md  project-documentation-review.md
.trae/documents/: CHECKLIST_PROJETO.md  final-system-validation-report-2024.md  lancamentos-do-dia-arquitetura.md  lancamentos-do-dia-prd.md  plano-testes-testsprite.md  project-status-analysis-2024.md  roadmap-proximas-acoes-2024.md  technical-architecture-shadcn-migration.md
.trae/rules/: project_rules.md
attached_assets/: TransactionModal.tsx
database_analysis_results/: database_structure.txt  tables_summary.txt
docs/: API_DOCUMENTATION.md  CHECKLIST_PROJETO.md  DEPLOY_WINDOWS_SERVER_2022_IIS.md  FRONTEND_PRODUCTION_CONFIG.md  GUIA_CONTINUIDADE.md  MANUAL_USUARIO.md  README.md  REQUISITOS_SISTEMA.md  USER_GUIDE.md  exemplos-codigo-app-web-financeiro.md  planejamento-app-web-financeiro.md  plano-desenvolvimento-detalhado.md  resumo-progresso-2024-01-25.md  status-atual-implementacao.md
docs/historico/: DEPLOYMENT.md  planejamento-app-web-financeiro.md  plano-desenvolvimento-detalhado.md  resumo-modulos-implementados.md  status-atual-implementacao.md
(+393 files in other folders)
