[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator==2.1.0",
    "fastapi==0.104.1",
    "pydantic==2.5.1",
    "pyjwt==2.8.0",
    "pyodbc==5.0.1",
    "pytest-asyncio==0.21.1",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "coverage==7.3.2",
    "pre-commit==3.6.0",
]
